--- a/src/modules/QuotesPage/index.scss
+++ b/src/modules/QuotesPage/index.scss
@@ -8,6 +8,18 @@
   @include flexCenter(column);
 }
 
+.advance-tools {
+  @include flexCenter(row);
+
+  & > div:first-child {
+    flex: 1;
+  }
+
+  & > div > .add-button {
+    cursor: pointer;
+  }
+}
+
 #quotes-page-table {
   border: var(--border-grey-line);
   margin: var(--spacing-size-d) 0;
