--- a/src/common/styles/app.scss
+++ b/src/common/styles/app.scss
@@ -1,8 +1,8 @@
 html,
 body,
 #app {
-  background-color: white;
-  color: #d2f5ff;
+  background-color: var(--background-color);
+  color: var(--text-color);
   font-family: var(--font-family);
   height: 100%;
   margin: 0;
@@ -46,6 +46,11 @@ button {
 
 h1 {
   font-size: var(--font-size-l);
+}
+
+input[type='text'],
+textarea {
+  outline: 0;
 }
 
 .card {
