--- a/src/modules/Form/index.scss
+++ b/src/modules/Form/index.scss
@@ -1,3 +1,82 @@
+@import '../../common/styles/mixins.scss';
+
 .modal-form {
   @include flexCenter(column);
+  background: white;
+  border-radius: var(--border-radius);
+  box-sizing: border-box;
+  height: 100%;
+  padding: var(--spacing-size-b) calc(var(--spacing-size-d) * 2) calc(var(--spacing-size-c) * 2);
+  width: 100%;
+
+  & > h1 {
+    color: var(--color-app);
+    margin: var(--spacing-size-d) 0;
+  }
+  & > div {
+    width: 100%;
+  }
+  & > div:nth-child(3) {
+    flex: 1;
+  }
+  & > div:last-child {
+    --buttons-section-height: 40px;
+    @include flex(row);
+    @include flexJustifyContent(flex-end);
+    height: var(--buttons-section-heigh);
+    padding: var(--spacing-size-d) 0 0 0;
+  }
+}
+
+.input-wrapper {
+  --input-padding: 12px 20px;
+  @include flex(column);
+
+  & > label {
+    padding: var(--spacing-size-c) 0 var(--spacing-size-a) 0;
+  }
+
+  & > input[type='text']#author-input {
+    box-sizing: border-box;
+    display: inline-block;
+    border: 2px solid var(--color-app);
+    border-radius: var(--border-radius);
+    padding: var(--input-padding);
+    width: 100%;
+  }
+
+  & > textarea#quote-input {
+    border-radius: var(--border-radius);
+    border: 2px solid var(--color-app);
+    padding: var(--input-padding);
+    resize: none;
+  }
+}
+
+.save-button {
+  --save-button-width: 75px;
+  background: var(--color-app);
+  border: 1px solid var(--color-app);
+  border-radius: var(--border-radius);
+  color: white;
+  cursor: pointer;
+  margin: 0 var(--spacing-size-a);
+  width: var(--save-button-width);
+
+  &:hover {
+    background: var(--color-app-hover);
+  }
+}
+
+.cancel-button {
+  border: none;
+  background: none;
+  color: var(--color-app);
+  cursor: pointer;
+  margin: 0 var(--spacing-size-c);
+
+  &:hover {
+    color: var(--color-app-hover);
+    text-decoration: underline;
+  }
 }
