Udpated modal style

--- a/src/modules/Modal/index.scss
+++ b/src/modules/Modal/index.scss
@@ -22,7 +22,7 @@
 }
 
 #modal-content {
-  background-color: var(--background-color-light);
-  height: 100%;
-  width: 90%;
+  background-color: var(--background-color);
+  border-radius: var(--border-radius);
+  width: 50%;
 }
