--- a/src/modules/QuotesPage/index.scss
+++ b/src/modules/QuotesPage/index.scss
@@ -61,3 +61,11 @@ input[type='text']#search-author {
     background: var(--add-button-color-hover);
   }
 }
+
+#author-info {
+  padding: var(--spacing-size-e);
+
+  & > h2 {
+    color: var(--color-app);
+  }
+}
