Updated spacing in advance tools element

--- a/src/modules/QuotesPage/index.scss
+++ b/src/modules/QuotesPage/index.scss
@@ -11,6 +11,7 @@
 
 .advance-tools {
   @include flexCenter(row);
+  margin: 0 var(--spacing-size-a) 0 var(--spacing-size-b);
 
   & > div:first-child {
     flex: 1;
