Add input form valiation

--- a/src/common/styles/theme.scss
+++ b/src/common/styles/theme.scss
@@ -9,7 +9,8 @@
   --color-grey: grey;
   --color-info: #ff83b1;
   --color-success: #00ac87;
-  --color-danger: #ee6464;
+  --color-danger: #b02b36;
+  --color-disabled: #e1e1e1;
   --color-warning: orange;
 
   --font-family: Montserrat, tahoma, verdana, sans-serif;
