--- a/src/modules/Form/index.scss
+++ b/src/modules/Form/index.scss
@@ -34,6 +34,11 @@
 
   & > label {
     padding: var(--spacing-size-c) 0 var(--spacing-size-a) 0;
+
+    & > span.error-message {
+      color: var(--color-danger);
+      font-size: var(--font-size-sm);
+    }
   }
 
   & > input[type='text']#author-input {
@@ -43,6 +48,10 @@
     border-radius: var(--border-radius);
     padding: var(--input-padding);
     width: 100%;
+
+    &.input-error {
+      border: 2px solid var(--color-danger);
+    }
   }
 
   & > textarea#quote-input {
@@ -50,6 +59,10 @@
     border: 2px solid var(--color-app);
     padding: var(--input-padding);
     resize: none;
+
+    &.input-error {
+      border: 2px solid var(--color-danger);
+    }
   }
 }
 
@@ -65,6 +78,13 @@
 
   &:hover {
     background: var(--color-app-hover);
+  }
+
+  &:disabled {
+    background: var(--color-disabled);
+    border: 1px solid var(--color-disabled);
+    color: white;
+    cursor: not-allowed;
   }
 }
 
